Fixed location box stretching page

--- a/assets/css/1200.css
+++ b/assets/css/1200.css
@@ -1,6 +1,17 @@
 /* CSS for extra large devices (1200px and up) */
 @media (min-width: 1200px) {
-  
+
+  body{
+    margin: 0;
+  }
+  /* .container {
+    box-sizing: border-box;
+  }
+
+  * { 
+    box-sizing: border-box;
+  } */
+
 /* -------------------------- */
 /* --------- Header --------- */
 /* -------------------------- */
@@ -203,6 +214,7 @@
     position: relative;
     bottom: 450px;
     left: 150px;
+    max-width: 1050px;
   }
   
   #map-box-text {
